@@ -25,15 +25,11 @@
 
         <!-- Cargo -->
         <cargo.container>jetty9x</cargo.container>
-        <cargo.container.url>
-            http://central.maven.org/maven2/org/eclipse/jetty/jetty-distribution/9.3.9.v20160517/jetty-distribution-9.3.9.v20160517.tar.gz
-        </cargo.container.url>
+        <cargo.container.url>http://central.maven.org/maven2/org/eclipse/jetty/jetty-distribution/9.4.6.v20170531/jetty-distribution-9.4.6.v20170531.tar.gz</cargo.container.url>
         <cargo.container.downloadDir>${user.home}/.m2/cargo/containers</cargo.container.downloadDir>
         <cargo.output>${basedir}/target/logs/container.log</cargo.output>
         <cargo.log>${basedir}/target/logs/cargo.log</cargo.log>
-        <cargo.port>8983</cargo.port>
-        <cargo.pingUrl>http://localhost:8983/crafter-profile/index.jsp</cargo.pingUrl>
-        <cargo.pingTimeOut>30000</cargo.pingTimeOut>
+        <cargo.port>7070</cargo.port>
         <cargo.profile.context>crafter-profile</cargo.profile.context>
 
         <!-- Profile Logging -->
@@ -135,7 +131,7 @@
             <plugin>
                 <groupId>org.codehaus.cargo</groupId>
                 <artifactId>cargo-maven2-plugin</artifactId>
-                <version>1.6.1</version>
+                <version>1.6.2</version>
                 <executions>
                     <execution>
                         <id>start-jetty</id>
@@ -153,25 +149,22 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <configuration>
+                        <properties>
+                            <cargo.servlet.port>${cargo.port}</cargo.servlet.port>
+                        </properties>
+                    </configuration>
                     <container>
                         <containerId>${cargo.container}</containerId>
                         <zipUrlInstaller>
                             <url>${cargo.container.url}</url>
                             <downloadDir>${cargo.container.downloadDir}</downloadDir>
                         </zipUrlInstaller>
-                        <output>${cargo.output}</output>
-                        <log>${cargo.log}</log>
                     </container>
-                    <configuration>
-                        <properties>
-                            <cargo.servlet.port>${cargo.port}</cargo.servlet.port>
-                            <cargo.jvmargs>${jacoco.agent.arg}</cargo.jvmargs>
-                        </properties>
-                    </configuration>
                     <deployables>
                         <deployable>
-                            <pingURL>${cargo.pingUrl}</pingURL>
-                            <pingTimeout>${cargo.pingTimeOut}</pingTimeout>
+                            <!--<pingURL>${cargo.pingUrl}</pingURL>-->
+                            <!--<pingTimeout>${cargo.pingTimeOut}</pingTimeout>-->
                             <properties>
                                 <context>${cargo.profile.context}</context>
                             </properties>
@@ -222,51 +215,5 @@
             </exclusions>
         </dependency>
     </dependencies>
-
-    <profiles>
-        <profile>
-            <id>coverage</id>
-            <activation>
-                <property>
-                    <name>coverage</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <!-- redo configuration from parent - coverage is done in jetty, not on tests -->
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <configuration>
-                            <argLine>-Xmx1024m -Xms256m -XX:MaxPermSize=256m</argLine>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <!-- redo configuration from parent - use itReportPath -->
-                        <groupId>org.jacoco</groupId>
-                        <artifactId>jacoco-maven-plugin</artifactId>
-                        <configuration>
-                            <destFile>${sonar.jacoco.itReportPath}</destFile>
-                            <dataFile>${sonar.jacoco.itReportPath}</dataFile>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>pre-test</id>
-                                <goals>
-                                    <goal>prepare-agent</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>post-test</id>
-                                <goals>
-                                    <goal>report</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 
 </project>
